# face-detection-api

./: .env  Spacefile  main.py  pyproject.toml  requirements.txt  vercel.json
api/: main.py
prisma/: schema.prisma
prisma/migrations/20230520084417_initial_schema/: migration.sql
prisma/migrations/20230522145206_remove_user_and_add_smslog/: migration.sql
src/routes/: sms.py  user.py
src/services/: sms_log.py  storage.py  user.py
src/utils/: supabase.py  twilio.py  vonage.py
test/: sms.py
